Hopefully fixed font size on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,9 @@ html {
   scroll-snap-type: y mandatory;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  font-size: clamp(14px, 1.2vw + 14px, 18px);
+  /* font-size: clamp(14px, 1.2vw + 14px, 18px); */
+  font-size: clamp(12px, 0.8vw + 10px, 22px);
+
 }
 
 body {
@@ -66,6 +68,10 @@ nav {
   padding-bottom: 1rem;
   z-index: 5;
   border-bottom: 2px solid black; /* optional */
+}
+
+nav a {
+  white-space: nowrap;
 }
 
 .nav-items {
@@ -142,7 +148,7 @@ h1 {
     text-align: left;
   }
   
-  html {
-    font-size: 22px;
-  }
+  /* html { */
+    /* font-size: 22px; */
+  /* } */
 }
